[package]
name = "phpup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = ["derive", "env"] }
clap_complete = "3.0.6"
itertools = "0.10.3"
once_cell = "1.9.0"
derive_more = "0.99.16"
serde = "1.0.133"
serde_json = "1.0.74"
serde_with = { version = "1.11.0", features = ["macros", "json"] }
regex = "1.5.4"
chrono = "0.4.19"
reqwest = { version = "0.11.1", features = ["blocking","rustls-tls"], default-features = false }
flate2 = "1.0.22"
tar = "0.4.38"
dirs = "1.0.4"
pathdiff = "0.2.1"
tempfile = "3.2.0"
num_cpus = "1.13.1"
colored = "1.6.1"
indoc = "1.0.3"

octocrab = "0.15.3"
# async-trait = "0.1.52"
tokio = { version = "1.15.0", features = ["full"] }
# curl = "0.4.41"
