[package]
name = "phpup"
version = "0.1.8"
authors = ["Masanori Ueno <masanori0213@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/masan4444/phpup"
description = "Cross-Platform PHP version manager"
keywords = ["php", "version", "manager"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
clap = { version = "3.0.5", features = ["derive", "env"] }
clap_complete = "3.0.6"
itertools = "0.10.3"
once_cell = "1.9.0"
derive_more = "0.99.16"
serde = "1.0.133"
serde_json = "1.0.74"
serde_with = { version = "1.11.0", features = ["macros", "json"] }
regex = "1.5.4"
chrono = { version = "0.4.19", features = ["serde"] }
flate2 = "1.0.22"
tar = "0.4.38"
dirs = "4.0.0"
pathdiff = "0.2.1"
which = "4.2.4"
tempfile = "3.2.0"
num_cpus = "1.13.1"
colored = "2.0.0"
indoc = "1.0.3"
indicatif = "0.16.2"
md5 = "0.7.0"
sha2 = "0.10.2"

[profile.release]
strip = "symbols"
